Update card-style to prevent videos to intercept event click on mobile devices

--- a/card-style.css
+++ b/card-style.css
@@ -27,6 +27,7 @@
   max-height: 100%;
   padding: 1rem;
   border: 2px solid var(--main-color);
+  pointer-events: none; /* Per evitare interazioni con il video */
 }
 
 /* Testo */
